# itmo-prog-tasks

./: CMakeLists.txt  README.md
week1/: circle.c  circle.h  game_of_life.c  tag_parser.c  task10.c  task11.c  task12.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
week2/lab1/: task1.cpp  task1.h
week2/lab2/: task2.cpp  task2.h
week2/lab3/: polynom.cpp  polynom.h  vector3.cpp  vector3.h
week2/lab4/: circle.cpp  circle.h  ellipse.cpp  ellipse.h
week2/lab5/: BaseCObject.h  CVector2D.h  Hexagon.h  IDialogInitable.h  IGeoFig.h  IPhysObject.h  IPrintable.h  Triangle.h  main.cpp
week2/lab67/: main.cpp  queue.h
week2/lab8/: main.cpp
week2/lab9/: main.cpp
